--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 <div class="copy col-lg-3">
                     <h1>copyright</h1>
                     <p>© Copyright<b> SWIMMING</b>. All Rights Reserved</p>
-                    <p>Desined by <a href="https://www.facebook.com/george.ashraf.359"> Swimmer George Ashraf </a></p>
+                    <p>Designed by <a href="https://www.facebook.com/george.ashraf.359"> Swimmer George Ashraf </a></p>
 
 
                 </div>
