--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/media.css">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
     <link rel="icon" href="images/icon.png">
     <title>swimming</title>
@@ -64,7 +63,7 @@
             </ul>
 
         </div>
-        <a class="navbar-brand" href="#"><i class="fa-solid fa-person-swimming"></i><a>
+        <a class="navbar-brand"><i class="fa-solid fa-person-swimming"></i><a>
     </nav>
     <section class="home">
         <div class="welcome col-lg-10 ">
@@ -75,7 +74,7 @@
         </div>
         <div class="sea col-lg-12"></div>
     </section>
-    <section class="typeof" id="typeof">
+    <section class="typeof bg" id="typeof">
         <div class="head col-lg-12">
             <img src="images/cloud.png" alt="">
             <h1>type of swimming</h1>
@@ -166,10 +165,10 @@
             </div>
         </div>
     </section>
-    <section class="swimbenfit" id="swimbenfit">
+    <section class="swimbenfit bg" id="swimbenfit">
         <div class="head col-lg-12">
             <img src="images/cloud.png" alt="">
-            <h1>Swimming Benefits</h1>
+            <h1 >Swimming Benefits</h1>
         </div>
         <div class="container-fluid">
             <div class="row">
@@ -184,19 +183,19 @@
                 <div class="benefit1 col-lg-12">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="text col-lg-6 col-md-6 col-sm-6">
-                                <h1>Improves your sleep</h1>
-                                <p>
+                            <div class=" text col-lg-6 col-md-6 col-sm-6">
+                                <h1 id="h1">Improves your sleep</h1>
+                                <p class="p">
                                     Swimming may have the power to help you sleep better at night. In a studyTrusted
                                     Source on older adults with insomnia, participants reported both a boost in quality
                                     of life and sleep after engaging in regular aerobic exercise.
                                 </p>
-                                <p>
+                                <p class="p">
                                     Nearly 50 percentTrusted Source of older persons experience some level of insomnia,
                                     so this is excellent news. The study focused on all types of aerobic exercise,
                                     including the elliptical, Stairmaster, bicycle, pool, and exercise videos.
                                 </p>
-                                <p>
+                                <p class="p">
                                     Swimming is accessible to a wide range of people who deal with physical issues that
                                     make other exercises, like running, less appealing. That can make swimming a good
                                     choice for older adults looking to improve their sleep.
@@ -224,8 +223,8 @@
                                 <img src="./images/mood.png" alt="">
                             </div>
                             <div class="text col-lg-6 col-md-6 col-sm-6">
-                                <h1>Boosts your mood</h1>
-                                <p>
+                                <h1 id="h1">Boosts your mood</h1>
+                                <p class="p">
                                     ResearchersTrusted Source evaluated a small group of people with dementia, and saw
                                     an improvement in mood after participating in a 12-week aquatic program. Swimming
                                     and aquatic workouts aren’t just psychologically beneficial for people with
@@ -248,14 +247,14 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="text col-lg-6 col-md-6 col-sm-6">
-                                <h1>Torches calories</h1>
-                                <p>Swimming is an efficient way to burn calories. A 160-pound person burns approximately
+                                <h1 id="h1">Torches calories</h1>
+                                <p class="p">Swimming is an efficient way to burn calories. A 160-pound person burns approximately
                                     423 calories an hour while swimming laps at a low or moderate pace. That same person
                                     may burn up to 715 calories an hour swimming at a more vigorous pace. A 200-pound
                                     person doing the same activities would burn between 528 and 892 calories an hour. A
                                     240-pound person might burn between 632 and 1,068.</p>
 
-                                <p> To compare these numbers to other popular low-impact activities, that same 160-pound
+                                <p class="p"> To compare these numbers to other popular low-impact activities, that same 160-pound
                                     person would only burn around 314 calories walking at 3.5 miles per hour for 60
                                     minutes. Yoga might burn just 183 calories per hour. And the elliptical trainer
                                     might burn just 365 calories in that hour.</p>
@@ -282,12 +281,12 @@
                                 <img src="./images/stress.png" alt="">
                             </div>
                             <div class="text col-lg-6 col-md-6 col-sm-6">
-                                <h1>Helps manage stress</h1>
-                                <p>Researchers surveyed a group of swimmers immediately before and after swimming at a
+                                <h1 id="h1">Helps manage stress</h1>
+                                <p class="p">Researchers surveyed a group of swimmers immediately before and after swimming at a
                                     YMCA in New Taipei City, Taiwan. Of the 101 people surveyed, 44 reported being
                                     mildly depressed and feeling stress related to fast-paced life. After swimming, the
                                     number of people who still reported feeling stressed decreased to just eight.</p>
-                                <p>
+                                <p class="p">
                                     While more research needs to be done in this area, the researchers conclude that
                                     swimming is a potentially powerful way to relieve stress quickly.</p>
                             </div>
@@ -297,7 +296,7 @@
             </div>
         </div>
     </section>
-    <section class="swimhero " id="swimhero">
+    <section class="swimhero bg " id="swimhero">
         <div class="head col-lg-12">
             <img src="images/cloud.png" alt="">
             <h1>Swimming Hero</h1>
@@ -389,8 +388,7 @@
     <script src="js/jquery.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-   
-
+    <script src="js/app.js"></script>
 </body>
 
 </html>
