--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
             <p>Hello and welcome to our site we explain here swimming in detail and we are the only site that presents
                 this.
             </p>
-            <a href="#typeof"> <button>Get Started</button></a>
+            <div class="button col-lg-3">
+                <a href="#typeof"> <button>Get Started</button></a>
+            </div>
+          
         </div>
         <div class="sea col-lg-12"></div>
     </section>
@@ -356,11 +359,8 @@
             <div class="row">
                 <div class="about col-lg-5">
                     <h1>About</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sint vel iusto cupiditate
-                        suscipit hic eos asperiores aliquid incidunt! Ab aliquam quaerat ad eum voluptas cupiditate
-                        fugiat, deleniti vel similique. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
-                        ab repudiandae sed rem deserunt quis culpa, commodi hic labore quidem, molestias ullam sit
-                        architecto omnis obcaecati magnam quae nostrum laborum?</p>
+                    <p>When I was browsing the Internet about topics related to swimming I found them either displayed in an unorganized way and in a bad color format or I found them incorrect, so the idea of this site came from.
+                    </p>
                 </div>
                 <div class="refr col-lg-2">
                     <h1>Reference</h1>
