--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="assets/bootstap/bootstrap.min.css">
+    <!-- wow -->
+    <link rel="stylesheet" href="assets/wow/animate.min.css">
+    <!-- font awsome -->
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/icon.png">
+    <link rel="icon" href="assets/images/icon.png">
     <title>swimming</title>
 </head>
 
@@ -24,7 +29,6 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-
                     <a class="nav-link" href="#"> <i class="fa-solid fa-droplet"></i>Home <span
                             class="sr-only">(current)</span></a>
                 </li>
@@ -67,25 +71,25 @@
     </nav>
     <section class="home">
         <div class="welcome col-lg-10 ">
-            <p>Hello and welcome to our site we explain here swimming in detail and we are the only site that presents
+            <p class="animate__animated animate__fadeInUp">Hello and welcome to our site we explain here swimming in detail and we are the only site that presents
                 this.
             </p>
-            <div class="button col-lg-3">
+            <div class="button animate__animated animate__fadeInUp col-lg-3">
                 <a href="#typeof"> <button>Get Started</button></a>
             </div>
-          
+
         </div>
         <div class="sea col-lg-12"></div>
     </section>
     <section class="typeof bg" id="typeof">
-        <div class="head col-lg-12">
-            <img src="images/cloud.png" alt="">
+        <div class="head  animate__animated animate__flipInY col-lg-12">
+            <img src="assets/images/cloud.png" alt="">
             <h1>type of swimming</h1>
         </div>
         <div class="container-fluid">
             <div class="row">
                 <div class="space col-lg-1 "></div>
-                <div class="type1  col-lg-11 " id="one">
+                <div class="type1 animate__animated animate__fadeInRight  col-lg-11 " id="one">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="text col-lg-6 col-md-6 col-sm-6">
@@ -93,16 +97,16 @@
                                 <p>The name comes from how a person’s arms move when performing this stroke.</p>
                             </div>
                             <div class="img col-lg-6  col-md-6 col-sm-6">
-                                <img src="images/butterfly.jpeg" alt="">
+                                <img src="assets/images/butterfly.jpeg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="type2  col-lg-11" id="two">
+                <div class="type2 animate__animated animate__fadeInLeft col-lg-11" id="two">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="img col-lg-6 col-md-6 col-sm-6">
-                                <img src="images/front crawl.jpeg" alt="">
+                                <img src="assets/images/front crawl.jpeg" alt="">
                             </div>
                             <div class="text col-lg-6 col-md-6 col-sm-6">
                                 <h2>Front crawl</h2>
@@ -117,7 +121,7 @@
                 </div>
                 <div class="space col-lg-1"></div>
                 <div class="space col-lg-1"></div>
-                <div class="type1 col-lg-11" id="three">
+                <div class="type1 animate__animated animate__fadeInRight col-lg-11" id="three">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="text col-lg-6 col-md-6 col-sm-6">
@@ -127,16 +131,16 @@
                                     forward.</p>
                             </div>
                             <div class="img col-lg-6 col-md-6 col-sm-6">
-                                <img src="images/breaststroke.jpg" alt="">
+                                <img src="assets/images/breaststroke.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="type2  col-lg-11" id="four">
+                <div class="type2 animate__animated animate__fadeInLeft col-lg-11" id="four">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="img col-lg-6 col-md-6 col-sm-6">
-                                <img src="images/backstroke.jpeg" alt="">
+                                <img src="assets/images/backstroke.jpeg" alt="">
                             </div>
                             <div class="text col-lg-6 col-md-6 col-sm-6">
                                 <h2>Backstroke</h2>
@@ -149,7 +153,7 @@
                 </div>
                 <div class="space col-lg-1"></div>
                 <div class="space col-lg-1"></div>
-                <div class="type1 col-lg-11" id="five">
+                <div class="type1 animate__animated animate__fadeInRight col-lg-11" id="five">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="text col-lg-6 col-md-6 col-sm-6">
@@ -160,7 +164,7 @@
                                     yourself forwar</p>
                             </div>
                             <div class="img col-lg-6 col-md-6 col-sm-6">
-                                <img src="images/sidestrock.jpeg" alt="">
+                                <img src="assets/images/sidestrock.jpeg" alt="">
                             </div>
                         </div>
                     </div>
@@ -169,9 +173,9 @@
         </div>
     </section>
     <section class="swimbenfit bg" id="swimbenfit">
-        <div class="head col-lg-12">
-            <img src="images/cloud.png" alt="">
-            <h1 >Swimming Benefits</h1>
+        <div class="head animate__animated animate__flipInY col-lg-12">
+            <img src="assets/images/cloud.png" alt="">
+            <h1>Swimming Benefits</h1>
         </div>
         <div class="container-fluid">
             <div class="row">
@@ -183,7 +187,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="benefit1 col-lg-12">
+                <div class="benefit1 animate__animated animate__fadeInTopLeft col-lg-12">
                     <div class="container-fluid">
                         <div class="row">
                             <div class=" text col-lg-6 col-md-6 col-sm-6">
@@ -205,7 +209,7 @@
                                 </p>
                             </div>
                             <div class="image col-lg-6 col-md-6 col-sm-6">
-                                <img src="./images/alarm.png" alt="">
+                                <img src="assets/images/alarm.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -219,11 +223,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="benefit2 col-lg-12">
+                <div class="benefit2 animate__animated animate__fadeInTopRight col-lg-12">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="image col-lg-6 col-md-6 col-sm-6">
-                                <img src="./images/mood.png" alt="">
+                                <img src="./assets/images/mood.png" alt="">
                             </div>
                             <div class="text col-lg-6 col-md-6 col-sm-6">
                                 <h1 id="h1">Boosts your mood</h1>
@@ -246,24 +250,26 @@
                         </div>
                     </div>
                 </div>
-                <div class="benefit1 col-lg-12">
+                <div class="benefit1 animate__animated animate__fadeInTopLeft col-lg-12">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="text col-lg-6 col-md-6 col-sm-6">
                                 <h1 id="h1">Torches calories</h1>
-                                <p class="p">Swimming is an efficient way to burn calories. A 160-pound person burns approximately
+                                <p class="p">Swimming is an efficient way to burn calories. A 160-pound person burns
+                                    approximately
                                     423 calories an hour while swimming laps at a low or moderate pace. That same person
                                     may burn up to 715 calories an hour swimming at a more vigorous pace. A 200-pound
                                     person doing the same activities would burn between 528 and 892 calories an hour. A
                                     240-pound person might burn between 632 and 1,068.</p>
 
-                                <p class="p"> To compare these numbers to other popular low-impact activities, that same 160-pound
+                                <p class="p"> To compare these numbers to other popular low-impact activities, that same
+                                    160-pound
                                     person would only burn around 314 calories walking at 3.5 miles per hour for 60
                                     minutes. Yoga might burn just 183 calories per hour. And the elliptical trainer
                                     might burn just 365 calories in that hour.</p>
                             </div>
                             <div class="image col-lg-6 col-md-6 col-sm-6">
-                                <img id="donate" src="./images/calories.png" alt="">
+                                <img id="donate" src="assets/images/calories.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -277,15 +283,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="benefit2 col-lg-12">
+                <div class="benefit2 animate__animated animate__fadeInTopRight col-lg-12">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="image col-lg-6 col-md-6 col-sm-6">
-                                <img src="./images/stress.png" alt="">
+                                <img src="assets/images/stress.png" alt="">
                             </div>
                             <div class="text col-lg-6 col-md-6 col-sm-6">
                                 <h1 id="h1">Helps manage stress</h1>
-                                <p class="p">Researchers surveyed a group of swimmers immediately before and after swimming at a
+                                <p class="p">Researchers surveyed a group of swimmers immediately before and after
+                                    swimming at a
                                     YMCA in New Taipei City, Taiwan. Of the 101 people surveyed, 44 reported being
                                     mildly depressed and feeling stress related to fast-paced life. After swimming, the
                                     number of people who still reported feeling stressed decreased to just eight.</p>
@@ -300,14 +307,14 @@
         </div>
     </section>
     <section class="swimhero bg " id="swimhero">
-        <div class="head col-lg-12">
-            <img src="images/cloud.png" alt="">
+        <div class="head animate__animated animate__flipInY col-lg-12">
+            <img src="assets/images/cloud.png" alt="">
             <h1>Swimming Hero</h1>
         </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="hero col-lg-3 col-md-3">
-                    <img src="./images/hero1.jpg" alt="">
+                <div class="hero animate__animated animate__zoomInUp col-lg-3 col-md-3">
+                    <img src="assets/images/hero1.jpg" alt="">
                     <div class="caption">
                         <h1>farida osman</h1>
                         <p id="p1">Egyptian swimmer</p>
@@ -321,8 +328,8 @@
                             individual athlete at the Games</p>
                     </div>
                 </div>
-                <div class="hero col-lg-3 col-md-3">
-                    <img src="./images/hero2.jpg" alt="">
+                <div class="hero animate__animated animate__zoomInUp col-lg-3 col-md-3">
+                    <img src="assets/images/hero2.jpg" alt="">
                     <div class="caption">
                         <h1>Michael Phelps</h1>
                         <p id="p1">American swimmer</p>
@@ -335,8 +342,8 @@
                         </p>
                     </div>
                 </div>
-                <div class="hero col-lg-3 col-md-3">
-                    <img src="./images/hero3.png" alt="">
+                <div class="hero animate__animated animate__zoomInUp col-lg-3 col-md-3">
+                    <img src="./assets/images/hero3.png" alt="">
                     <div class="caption">
                         <h1>Rikako Ikee</h1>
                         <p id="p1">Japanese swimmer</p>
@@ -359,13 +366,16 @@
             <div class="row">
                 <div class="about col-lg-5">
                     <h1>About</h1>
-                    <p>When I was browsing the Internet about topics related to swimming I found them either displayed in an unorganized way and in a bad color format or I found them incorrect, so the idea of this site came from.
+                    <p>When I was browsing the Internet about topics related to swimming I found them either displayed
+                        in an unorganized way and in a bad color format or I found them incorrect, so the idea of this
+                        site came from.
                     </p>
                 </div>
                 <div class="refr col-lg-2">
                     <h1>Reference</h1>
                     <ul>
-                        <li><a href="https://stylesatlife.com/articles/types-of-swimming-strokes/">Type of swimming</a></li>
+                        <li><a href="https://stylesatlife.com/articles/types-of-swimming-strokes/">Type of swimming</a>
+                        </li>
                         <li><a href="https://www.healthline.com/health/benefits-of-swimming#benefits">swimming
                                 benefits</a></li>
                         <li><a href="https://en.m.wikipedia.org/wiki/Farida_Osman">farida osman</a></li>
@@ -385,9 +395,19 @@
         </div>
 
     </footer>
-    <script src="js/jquery.slim.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <!-- bootstrap -->
+    <script src="assets/bootstap/jquery.slim.min.js"></script>
+    <script src="assets/bootstap/popper.min.js"></script>
+    <script src="assets/bootstap/bootstrap.min.js"></script>
+    <!-- Jquery -->
+    <script src="assets/jquery/jquery-3.6.1.min.js"></script>
+    <!-- wow js -->
+    <script src="assets/wow/wow.min.js"></script>
+    <!-- smooth scroll -->
+    <script src="assets/smooth scroll/smooth-scroll.polyfills.min.js"></script>
+    <!-- nice scroll -->
+    <script src="assets/nice scroll/jquery.nicescroll.min.js"></script>
+    <!-- my file js -->
     <script src="js/app.js"></script>
 </body>
 
